<resources>
    <string name="app_name">T World</string>
    <string name="no_internet_connection">No Internet Connection.</string>
    <string name="no_data_found">No Data Found.</string>
    <!--need to remove start-->
    <string name="ad_app_id">ca-app-pub-3940256099942544~3347511713</string>
    <string name="my_Interstitial_Add">ca-app-pub-3940256099942544/1033173712</string>
    <string name="banner_ad">ca-app-pub-3940256099942544/6300978111</string>
    <string name="hello_blank_fragment">Hello blank fragment</string>
    <!--need to remove end-->
    <!--login/sign up-->
    <string name="forgotPW">Forgot password ?</string>
    <string name="email_mobile_no">Email / Phone Number</string>
    <string name="login">Log In</string>
    <string name="DontHaveAnAccount">Don\'t have an account ?  </string>
    <string name="facebook_app_id">3029408903802829</string>
    <string name="fb_login_protocol_scheme">fb3029408903802829</string>
    <string name="next">Next</string>

    <!--setting screen-->
    <string name="follow_and_invite_friends">Follow and invite Friends</string>
    <string name="follow_and_invite">Follow and invite</string>
    <string name="security">Security</string>
    <string name="privacy">Privacy</string>
    <string name="notifications">Notifications</string>
    <string name="account">Account</string>
    <string name="help">Help</string>
    <string name="about">About</string>
    <string name="logout">Logout</string>
    <string name="setting">Settings</string>

    <string name="invite_by_email">Invite friends by email</string>
    <string name="invite_by_wapp">Invite friends by WhatsApp</string>
    <string name="invite_by_sms">Invite friends by SMS</string>
    <string name="invite_by">Invite friends via…</string>

    <string name="video_download"> Video Download</string>
    <string name="video_message">Message</string>
    <string name="video_comment">Comment</string>
    <string name="mention">Mention</string>
    <string name="tag">Tag</string>
    <string name="blocked_accounts">Blocked Accounts</string>
    <string name="allow_tags_from">Allow Tags From</string>
    <string name="private_account">Private Account</string>

    <string name="allow_comment_from">Allow Comment For</string>
    <string name="hide_comment_section">Hide Comment Section</string>
    <string name="allow_mention_from">Allow Mention From</string>
    <string name="allow_tag_from">Allow Tag From</string>
    <string name="every_one">Everyone</string>
    <string name="no_one">No One</string>
    <string name="people_you_follow">People You Follow</string>
    <string name="people_follow_you">People Follow You </string>
    <string name="follow_requests">Follow Requests</string>
    <string name="select_country">Select Country</string>
    <string name="password">Password</string>
    <string name="sign_up"> Sign Up</string>
    <string name="or">OR</string>
    <string name="already_have_an_account">Already have an account ?</string>
    <string name="log_in"> Log In</string>
    <string name="there_is_no_data_available">There is No Data Available.</string>
    <string name="sound">Sound</string>
    <string name="verify_otp">Verify OTP</string>
    <string name="verify">Verify</string>
</resources>
