<?xml version="1.0" encoding="utf-8"?>
<RelativeLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:background="@color/black"
    android:backgroundTint="#000"
    android:padding="20dp"
    tools:context="com.semonics.tworld.Accounts.SignUpActivity">

    <LinearLayout
        android:id="@+id/ll_sign_up_main"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:layout_centerInParent="true"
        android:backgroundTint="#000"
        android:orientation="vertical">

        <ImageView
            android:layout_width="wrap_content"
            android:layout_height="70dp"
            android:layout_marginBottom="20dp"
            android:src="@drawable/app_name_icon_white" />

        <LinearLayout
            android:id="@+id/activity_sign_up_ll_country"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:background="@drawable/login_border"
            android:orientation="horizontal"
            android:padding="5dp">

            <ImageView
                android:id="@+id/activity_sign_up_iv_country"
                android:layout_width="30dp"
                android:layout_height="30dp"
                android:layout_gravity="center"
                android:src="@drawable/com_facebook_button_icon" />

            <TextView
                android:id="@+id/activity_sign_up_tv_country_name"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:padding="10dp"
                android:text="@string/select_country" />
        </LinearLayout>

        <EditText
            android:id="@+id/activity_sign_up_email"
            android:layout_width="match_parent"
            android:layout_height="40dp"
            android:layout_marginTop="20dp"
            android:adjustViewBounds="true"
            android:background="@drawable/login_border"
            android:enabled="true"
            android:hint="@string/email_mobile_no"
            android:padding="10dp"
            android:textColor="#fff"
            android:textColorHint="#fff"
            android:textSize="12sp" />

        <EditText
            android:id="@+id/activity_sign_up_password"
            android:layout_width="match_parent"
            android:layout_height="40dp"
            android:layout_marginTop="20dp"
            android:adjustViewBounds="true"
            android:background="@drawable/login_border"
            android:enabled="true"
            android:hint="@string/password"
            android:inputType="textPassword"
            android:padding="10dp"
            android:textColor="#fff"
            android:textColorHint="#fff"
            android:textSize="12sp" />

        <Button
            android:id="@+id/btn_sign_up"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:layout_marginTop="20dp"
            android:background="@drawable/login_border"
            android:backgroundTint="@color/colorPrimary"
            android:text="@string/sign_up"
            android:textAllCaps="false"
            android:textColor="#fff" />

        <TextView
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_gravity="center"
            android:layout_marginTop="15dp"
            android:text="@string/or"
            android:textColor="#fff"
            android:textSize="15sp" />


    </LinearLayout>

    <LinearLayout
        android:layout_width="match_parent"
        android:layout_height="match_parent"
        android:layout_below="@+id/ll_sign_up_main"
        android:layout_gravity="bottom"
        android:gravity="center|bottom">

        <TextView
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:text="@string/already_have_an_account"
            android:textSize="15sp" />

        <TextView
            android:id="@+id/tv_log_in"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:text="@string/log_in"
            android:textColor="@color/colorPrimary"
            android:textSize="18sp" />
    </LinearLayout>
</RelativeLayout>
