<?xml version="1.0" encoding="utf-8"?>
<RelativeLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:background="@color/black"
    android:backgroundTint="#000"
    android:padding="20dp"
    tools:context="com.semonics.tiktik.Accounts.ForgotPasswordActivity">

    <LinearLayout
        android:id="@+id/ll_login_main"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:layout_centerInParent="true"
        android:orientation="vertical">

        <TextView
            android:id="@+id/lblHeader"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:layout_gravity="center_horizontal"
            android:layout_marginBottom="10dp"
            android:gravity="center_horizontal"
            android:padding="20dp"
            android:text="@string/app_name"
            android:textColor="#fff"
            android:textSize="36sp"
            android:textStyle="bold" />

        <EditText
            android:id="@+id/activity_forgot_pw_et_email"
            android:layout_width="match_parent"
            android:layout_height="40dp"
            android:layout_marginTop="10dp"
            android:adjustViewBounds="true"
            android:alpha="0.7"
            android:background="@drawable/login_border"
            android:hint="@string/email_mobile_no"
            android:padding="10dp"
            android:textColor="#fff"
            android:textColorHint="#fff"
            android:textSize="12sp" />

        <Button
            android:id="@+id/activity_forgot_pw_btn_next"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:layout_marginTop="50dp"
            android:backgroundTint="@color/com_facebook_blue"
            android:text="@string/next"
            android:textAllCaps="false"
            android:textColor="#fff" />

    </LinearLayout>

</RelativeLayout>
