<?xml version="1.0" encoding="utf-8"?>
<FrameLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    tools:context=".Settings.CommentFragment">
    <RelativeLayout
        android:layout_width="match_parent"
        android:layout_height="match_parent"
        android:background="@color/black"
        android:backgroundTint="#000"
        android:paddingTop="24dp">

        <androidx.appcompat.widget.Toolbar
            android:id="@+id/toolbar"
            android:layout_width="match_parent"
            android:layout_height="48dp"
            android:layout_weight="1"
            android:background="@color/black"
            >

            <RelativeLayout
                android:layout_width="match_parent"
                android:layout_height="match_parent">

                <ImageButton
                    android:id="@+id/Goback"
                    android:layout_width="32dp"
                    android:layout_height="32dp"
                    android:layout_alignParentLeft="true"
                    android:layout_centerVertical="true"
                    android:layout_marginLeft="10dp"
                    android:background="@android:color/transparent"
                    android:scaleType="fitStart"
                    android:src="@drawable/ic_back_ios"
                    android:tint="@color/white" />

                <TextView
                    android:layout_width="wrap_content"
                    android:layout_height="wrap_content"
                    android:layout_centerInParent="true"
                    android:layout_centerVertical="true"
                    android:text="@string/mention"
                    android:textColor="@color/white"
                    android:textSize="15dp"
                    android:textStyle="bold" />


            </RelativeLayout>

        </androidx.appcompat.widget.Toolbar>
        <LinearLayout
            android:layout_width="match_parent"
            android:layout_below="@id/toolbar"
            android:padding="20dp"
            android:orientation="vertical"
            android:background="@color/black"
            android:backgroundTint="#000"
            android:layout_height="match_parent">

            <TextView
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:text="@string/allow_mention_from"
                android:layout_marginBottom="10dp"
                android:textColor="@color/white"
                android:textSize="20dp"
                android:textStyle="bold" />

            <RadioGroup
                android:layout_width="fill_parent"
                android:layout_height="wrap_content"
                android:weightSum="1"
                android:id="@+id/radioGroup"
                >

                <RadioButton
                    android:layout_width="match_parent"
                    android:layout_height="wrap_content"
                    android:text="@string/every_one"
                    android:textColor="@color/white"
                    android:id="@+id/radioButton"
                    android:buttonTint="@color/white"
                    android:layout_marginBottom="8dp"
                    android:layout_gravity="center_horizontal"
                    android:checked="true"
                    android:textSize="15sp" />

                <RadioButton
                    android:layout_width="match_parent"
                    android:layout_height="wrap_content"
                    android:text="@string/people_you_follow"
                    android:layout_marginBottom="8dp"
                    android:id="@+id/radioButton2"
                    android:buttonTint="@color/white"
                    android:textColor="@color/white"
                    android:layout_gravity="center_horizontal"
                    android:checked="false"
                    android:textSize="15sp"
                    />

                <RadioButton
                    android:layout_width="match_parent"
                    android:layout_height="wrap_content"
                    android:text="@string/no_one"
                    android:buttonTint="@color/white"
                    android:id="@+id/radioButton3"
                    android:textColor="@color/white"
                    android:layout_gravity="center_horizontal"
                    android:checked="false"
                    android:textSize="15sp"
                    />
            </RadioGroup>
        </LinearLayout>

    </RelativeLayout>

</FrameLayout>